# opsui-meetings

./: .gitignore  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: publish-desktop-update.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/scripts/: create-vector-store.mjs
apps/api/src/: server.ts  types.ts
apps/api/src/config/: env.ts
apps/api/src/db/: adapter.ts  database.ts  postgres-adapter.ts  sqlite-adapter.ts
apps/api/src/modules/: ai.ts  auth.ts  google-auth.ts  google-calendar.ts  google-drive-briefs.ts  meeting-parser.ts  meeting-requests.ts  meetings.ts  users.ts
apps/desktop/: .env.example  README.md  index.html  package.json  vite.config.ts
apps/desktop/scripts/: build-desktop.mjs  build-signed.ps1  generate-updater-manifest.mjs  set-build-version.mjs  sync-icons.mjs  sync-icons.ps1
apps/desktop/scripts/lib/: desktop-release.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AdminPanel.tsx  AppShell.tsx  CreateMeetingPanel.tsx  CurrentMeetingPanel.tsx  LoginScreen.tsx  MeetingCalendar.tsx  MeetingDetailDrawer.tsx  MeetingList.tsx  SelectMenu.tsx  UpdateGate.tsx
apps/desktop/src/lib/: api.ts  (+7 more)
docs/: CODEX_UI_REDESIGN_PROMPT.md  DEPLOYMENT.md  DESKTOP_CROSS_PLATFORM.md  RELEASES.md  RENDER_FIRST_ROLLOUT.md  TECHNICAL_PLAN.md
(+1 files in other folders)
